--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@graphql-codegen/schema-ast": "^4.1.0",
     "@graphql-typed-document-node/core": "^3.2.0",
     "@next/env": "^15.2.3",
+    "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
+    "keen-slider": "^6.8.6",
     "lucide-react": "^0.481.0",
-    "next": "15.2.2",
+    "next": "15.3.0-canary.23",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.2",
