--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "15.3.0-canary.23",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "resend": "^4.2.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
